``` docs(readme): 添加 Bun 安装和运行方式说明
在 README 和 README_CN 中补充了使用 Bun 包管理器安装和运行项目的命令，
包括 bun add、bunx、bun install、bun run build 和 bun run dev 等指令。

同时更新了 package-lock.json 和 package.json 中部分依赖的许可证信息，
将 ISC 许可证更正为 MIT 许可证，并在 .gitignore 中忽略 bun.lockb 文件。
```

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react"
   ],
   "author": "Adam Ikara <adam-ikari@outlook.com>",
-  "license": "ISC",
+  "license": "MIT",
   "description": "A beautiful terminal UI todo app built with Ink and React",
   "files": [
     "dist",
